Fixed bug where adding panel fires twice. Shifted rows around new_manifest view so search works.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,20 @@
  *= require_tree .
  */
 
+/* .item-ids-input {
+  display: none;
+} */
+
+.invalid-feedback {
+  width: 100%;
+  margin-top: .25rem;
+  /* font-size: 80%; */
+  color: #dc3545;
+  display: inline-inline-block;
+  position: relative;
+  left: 20%;
+}
+
 /* New manifest form */
 
 #resources-lookup form {
